src/objects/Company_Wide_Report__c.object
<CustomObject>
    <description>This object represents the actual running of the Company Wide Report and contains the results of calculations based on the time the report was run</description>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ready_To_Send__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready To Send</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reporting_Frequency__c</fullName>
        <label>Reporting Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sent_Datetime__c</fullName>
        <label>Sent Datetime</label>
        <type>DateTime</type>
    </fields>
    <label>Company Wide Report</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Reporting_Frequency__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CWR-{0000000}</displayFormat>
        <label>Company Wide Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Company Wide Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>